--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.4.0",
     "react-is": "^19.0.0",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "sanity": "^3.74.1",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1"
