--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@sanity/vision": "^3.74.1",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.3",
+    "lucide-react": "^0.476.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.54",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-is": "^19.0.0",
